src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
}

body {
  background-color: #eee;
  width: 100vw;
  height: 100vh;
  letter-spacing: -0.6px;
}

main {
  background-color: #fff;
  min-width: 390px;
  max-width: 425px;
  height: 100%;
  margin: auto;
  background-color: #fff;
  overflow-y: scroll;
}

.formInput {
  width: 100%;
  border: 1px solid #dfdfdf;
  border-radius: 4px;
  padding: 8px 12px;
}

.formInput_entering {
  border: 1px solid #153445;
}

.formInput_warn {
  border: 1px solid #eb5147;
}

.formInput:focus-visible {
  outline: none;
}

.userBubble {
  width: fit-content;
  padding: 10px 20px 10px 20px;
  background-color: #000;
  color: white;
  align-self: flex-end;
  border-radius: 20px 6px 20px 20px;
}

.bubble {
  position: absolute;
  top: -60px;
  left: 20px;
  width: 140px;
  border-radius: 40px;
  text-align: center;
  background-color: black;
  padding: 4px 0;
  font-size: 14px;
  color: white;
}

.bubble::after {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  content: "";
  width: 0;
  height: 0;
  border-top: 12px solid black;
  border-left: 12px solid transparent;
  border-right: 12px solid transparent;
}
.card {
  display: flex;
  flex-direction: column;
  margin: 1rem auto;
  height: 12rem;
  width: 80%;
  border-radius: 0.75rem;
  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
}

.fixedButton {
  display: flex;
  align-items: center;
  justify-content: center;
  min-width: 425px;
  height: 50px;
  position: fixed;
  bottom: 50px;
  background-color: #000;
  color: #fff;
}

